chore(backend): just some itsy bitsy cleanup
